--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
